@@ -15,6 +15,8 @@
 	exmpp_stringprep:*prep/1 uses. Add table conversion.
 	(get_last): Do not convert status to binary because it's already one.
 
+	* src/mod_adhoc.erl: Remove compatibility code (not tested yet).
+
 2008-09-25  Jean-Sébastien Pédron  <js.pedron@meetic-corp.com>
 
 	* src/jlib.erl (timestamp_to_xml): Create an #xmlel element, not an
